# learnOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
notes/: notes.md
resources/shaders/: basic.shader
src/: main.cpp
src/renderer/: ErrorChecker.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
